<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:visibility="visible"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:text="@string/time_yuezai_name"
        android:textColor="@color/time_color"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_over_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:text="@string/time_time_name"
            android:textSize="24dp"
            android:textColor="@color/time_over_time_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:text="@string/time_kanwan_name"
        android:textColor="@color/time_color"
        android:textSize="18dp" />

</LinearLayout>