<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_show_movie_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_bg"
    android:orientation="vertical"
    android:paddingLeft="30dp" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/show_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_zero"
        android:layout_weight="1.33"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/layout_zero"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/empty_margin_right"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_zero"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="5.61"
            android:background="@drawable/menubg"
            android:orientation="horizontal"
            android:paddingRight="30dp" >

            <TextView
                android:layout_width="@dimen/layout_zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/theme_name_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dianying_name"
                android:textColor="@color/text_active"
                android:textSize="@dimen/theme_name_text_size" />

            <TextView
                android:layout_width="@dimen/layout_zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="2/123"
                android:textColor="@color/time_color"
                android:textSize="@dimen/jishu_text_size"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_zero"
        android:layout_weight="15.17"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/layout_zero"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/empty_margin_right"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" 
                android:paddingBottom="@dimen/edit_vertical_margin"
                android:paddingTop="@dimen/edit_vertical_margin" >

                <LinearLayout
                    android:id="@+id/ll_search"
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="match_parent"
                    android:layout_weight="19"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/search_selector"
                    android:paddingLeft="@dimen/search_padding_left">

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical" 
                        android:background="@android:color/transparent"  
                        android:hint="@string/search_hint"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textSize="@dimen/search_text_size"
                        android:focusable="false"
                        android:textColorHighlight="#404040" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bt_search_click"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_search_selector" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_zero"
                android:layout_weight="15"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/bt_quanbufenlei"
                    style="@style/style_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1"
                    android:background="@drawable/text_drawable_selector"
                    android:gravity="right|center_vertical"
                    android:text="@string/quanbufenlei_name"
                    android:textColor="@color/text_color_selector" />

                <LinearLayout
                    android:id="@+id/ll_dongzuopian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_dongzuopian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/dongzuopian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_kehuanpian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_kehuanpian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/kehuanpian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_lunlipian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_lunlipian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/lunlipian_pian" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_xijupian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_xijupian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/xijupian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_aiqingpian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_aiqingpian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/aiqingpian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_xuanyipian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_xuanyipian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/xuanyipian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_kongbupian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_kongbupian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/kongbupian_name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_donghuapian"
                    style="@style/style_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/bt_donghuapian"
                        style="@style/style_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/donghuapian_name" />
                </LinearLayout>

                <TextView
                    style="@style/style_4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1.73" />

                <TextView
                    style="@style/style_4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1.77"
                    android:gravity="right|center_vertical" />

                <Button
                    android:id="@+id/bt_zuijinguankan"
                    style="@style/style_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1"
                    android:background="@drawable/text_drawable_selector"
                    android:gravity="right|center_vertical"
                    android:text="@string/zuijinguankan_name"
                    android:textColor="@color/text_color_selector" />

                <Button
                    android:id="@+id/bt_zhuijushoucang"
                    style="@style/style_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1"
                    android:background="@drawable/text_drawable_selector"
                    android:gravity="right|center_vertical"
                    android:text="@string/zhuijushoucang_name"
                    android:textColor="@color/text_color_selector" />

                <Button
                    android:id="@+id/bt_lixianshipin"
                    style="@style/style_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_zero"
                    android:layout_weight="1"
                    android:background="@drawable/text_drawable_selector"
                    android:gravity="right|center_vertical"
                    android:text="@string/lixianshipin_name"
                    android:textColor="@color/text_color_selector"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_zero"
            android:layout_height="match_parent"
            android:layout_weight="5.61"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/fl_movie_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="34dp" >

                <com.joyplus.tv.ui.MyMovieGridView
                    android:id="@+id/gv_movie_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="5" >
                </com.joyplus.tv.ui.MyMovieGridView>

                <include
                    android:id="@+id/inclue_movie_show_item"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    layout="@layout/show_item_layout_dianying" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>