<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_dark"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_gaoqing_chaoqing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yingping_button_selector"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="true"
        android:paddingLeft="4dp" >

        <Button
            android:id="@+id/bt_gaoqing_chaoqing_bofang"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:text="@string/xiangqing_bofang"
            android:textColor="@color/text_foucs"
            android:textSize="17dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_gaoqing_chaoqing_gaoqing"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:paddingRight="4dp"
            android:text="@string/gaoqing_chaogaoqing"
            android:textColor="@color/text_foucs"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gaoqing_gaoqing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yingping_button_selector"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="true"
        android:paddingLeft="4dp" >

        <Button
            android:id="@+id/bt_gaoqing_gaoqing_bofang"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:text="@string/xiangqing_bofang"
            android:textColor="@color/text_foucs"
            android:textSize="17dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_gaoqing_gaoqing_gaoqing"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:paddingRight="4dp"
            android:text="@string/gaoqing_gaoqing"
            android:textColor="@color/text_foucs"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gaoqing_biaoqing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yingping_button_selector"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="true"
        android:paddingLeft="4dp" >

        <Button
            android:id="@+id/bt_gaoqing_biaoqing_bofang"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:text="@string/xiangqing_bofang"
            android:textColor="@color/text_foucs"
            android:textSize="17dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_gaoqing_biaoqing_gaoqing"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:longClickable="false"
            android:paddingRight="4dp"
            android:text="@string/gaoqing_biaoqing"
            android:textColor="@color/text_foucs"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>